# snaffgreppy

./: LICENSE  README.md  pyproject.toml
snaffgreppy/: __main__.py  constants.py  dirtree.py  snaffgrep.py
