[tool.poetry]
name = "snaffgreppy"
version = "0.1.0"
description = ""
authors = ["akueppers <alexander.kueppers@atos.net>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
